--- a/squirrels_love_chimps_lists/prive/squelettes/extra/squirrel_chimp_modeles.html
+++ b/squirrels_love_chimps_lists/prive/squelettes/extra/squirrel_chimp_modeles.html
@@ -39,7 +39,7 @@
 <div>
 	
  <dl>
-<BOUCLE_cond(CONDITION){si #GET{total}|>={1}}>
+<BOUCLE_cond(CONDITION){si #GET{total}|>{1}}>
 	<dt><:scl:modeles:></dt>
 	<dt><em><:scl:tout:></em></dt>
 		<dd class="odd">
