Revert "changes in HTML tags - class"
This reverts commit 4ec3a18d088e37789a6f76fc9220295f60809c93.

--- a/squirrels_love_chimps_lists/formulaires/squirrel_chimp_abonnement_liste.html
+++ b/squirrels_love_chimps_lists/formulaires/squirrel_chimp_abonnement_liste.html
@@ -21,7 +21,7 @@
 				[(#REM)récupère les champs accordées avec mailchimp]
 				<BOUCLE_donnees_perso(POUR){tableau #ENV{donnees_personnelles}}>
 					
-				[<li class="editer_#VALEUR[ (#ENV**{erreurs}|table_valeur{#VALEUR}|oui)erreur]">
+				[<li class="zditer_#VALEUR[ (#ENV**{erreurs}|table_valeur{#VALEUR}|oui)erreur]">
 					<label for="#VALEUR">#EVAL{_T('scl:#CLE');}</label>
 					[
 					<span class='erreur'>(#ENV**{erreurs}|table_valeur{#VALEUR})</span>
@@ -52,7 +52,7 @@
 
 		</fieldset>	
 		<BOUCLE_teste(CONDITION){si #GET{liste_donnes}|count|>{1}}>
-			<fieldset class="donnees_lists">
+			<fieldset class="donnees_perso">
 				<legend><:scl:mailinglists:></legend>
 	
 	
