--- a/squirrels_love_chimps_lists/formulaires/squirrel_chimp_lists_config.html
+++ b/squirrels_love_chimps_lists/formulaires/squirrel_chimp_lists_config.html
@@ -1,4 +1,4 @@
-<fieldset class="donnees_lists">
+<fieldset>
 	<legend><:scl:gestion_listes:></legend>
 	#SET{apikey,#CONFIG{squirrel_chimp/apiKey}}
 	<ul>
@@ -65,7 +65,7 @@
 		</li>	
 	</ul>
 </fieldset>
-<fieldset class="donnees_lists">
+<fieldset>
 	<legend><:scl:champs_supp:></legend>
 
 	<ul>
